Added Plausable analytics

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <script defer data-domain="memerson.dev" src="https://plausible.io/js/script.js"></script>
     <title>Matthew Emerson</title>
   </head>
   <body>
